// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField TextField normal 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with autocomplete 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      autoComplete="email"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with disabled 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base disabled normal medium truncate"
      disabled={true}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with enterKeyHint 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      enterKeyHint="go"
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with error 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="true"
      className="textField base enabled errored medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="box marginTop2"
  >
    <div
      className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
    >
      <span
        className="formErrorMessage"
        id="test-error"
      >
        error message
      </span>
    </div>
  </div>
</span>
`;

exports[`TextField TextField with hasError 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="true"
      className="textField base enabled errored medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with maxLength character counter 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      maxLength={20}
      name="maxLength"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="box marginTop2"
  >
    <div
      className="Flex rowGap4 columnGap4 xsDirectionRow"
    >
      <div
        className="FlexItem flexGrow"
      />
      <div
        className="FlexItem"
      >
        <div
          className="absolute box"
          style={
            Object {
              "visibility": "hidden",
            }
          }
        >
          <div
            className="Text fontSize100 subtleText alignStart breakWord fontWeightNormal"
          >
            20/20
          </div>
        </div>
        <div
          className="Flex rowGap1 columnGap1 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="box"
              style={
                Object {
                  "width": 16,
                }
              }
            />
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap0 justifyEnd xsDirectionRow"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="Text fontSize100 subtleText alignEnd breakWord fontWeightNormal"
              >
                0/20
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`TextField TextField with name 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with readOnly 1`] = `
<span>
  <div
    className="box relative"
  >
    <input
      aria-describedby={null}
      aria-invalid="false"
      className="textField base enabled normal medium truncate"
      disabled={false}
      id="test"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={true}
      type="text"
    />
  </div>
</span>
`;

exports[`TextField TextField with tags 1`] = `
<span>
  <div
    className="box relative"
  >
    <div
      className="textField base enabled normal large textFieldWrapper"
    >
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box rounding2 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="a@pinterest.com"
            >
              <span
                className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
              >
                a@pinterest.com
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button secondary hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove email tag"
                  className="icon defaultIcon iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box rounding2 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="b@pinterest.com"
            >
              <span
                className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
              >
                b@pinterest.com
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button secondary hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove email tag"
                  className="icon defaultIcon iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box marginBottom1 marginEnd1"
      >
        <div
          aria-disabled={false}
          className="box rounding2 secondary xsDisplayInlineBlock"
          style={
            Object {
              "height": 32,
              "maxWidth": 300,
            }
          }
        >
          <div
            className="Flex rowGap0 columnGap0 itemsCenter xsDirectionRow"
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <div
              className="box marginEnd2 marginStart0"
            />
            <div
              className="truncate"
              title="c@pinterest.com"
            >
              <span
                className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
              >
                c@pinterest.com
              </span>
            </div>
            <div
              className="box marginStart1"
            >
              <button
                className="button secondary hideOutline tapTransition accessibilityOutline"
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden={null}
                  aria-label="Remove email tag"
                  className="icon defaultIcon iconBlock"
                  height={8}
                  role="img"
                  viewBox="0 0 24 24"
                  width={8}
                >
                  <path
                    d="test-file-stub"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="box flexGrow marginEnd2 relative"
        style={
          Object {
            "maxWidth": "100%",
          }
        }
      >
        <div
          aria-hidden={true}
          className="textFieldSpacer"
        />
        <input
          aria-describedby={null}
          aria-invalid="false"
          className="unstyledTextField"
          disabled={false}
          id="test"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          type="text"
        />
      </div>
    </div>
  </div>
</span>
`;
